[package]
name = "maxfun-evt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
alloy = { version = "0.11", features = ["full", "json-abi"] }
chrono = { version = "0.4" }
dotenvy = "0.15"
#ethers = { version = "2.0", features = ["abigen", "rustls"] }
redis = { version = "0.28", features = ["default", "connection-manager", "tokio-comp", "r2d2"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ['full'] }
tokio-cron-scheduler = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2.0"
rust_decimal = "1.35"
base64 = "0.22.1"